--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="canonical" href="https://ferronnerie-peltier.fr/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ferronnerie Serrurerie Peltier</title>
+  <title>Ferronnerie d'Art - Serrurerie - Metallerie | Willy Peltier</title>
 </head>
 
 <body>
